<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/inputTitle"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/title"
        android:inputType="text" />

    <EditText
        android:id="@+id/inputAmount"
        android:layout_width="381dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/amount"
        android:inputType="numberDecimal" />

    <Spinner
        android:id="@+id/categorySpinner"
        android:layout_width="379dp"
        android:layout_height="39dp" />

    <TextView
        android:id="@+id/textDate"
        android:layout_width="379dp"
        android:layout_height="wrap_content"
        android:background="@android:color/darker_gray"
        android:clickable="true"
        android:focusable="true"
        android:hint="@string/date"
        android:padding="8dp" />

    <Button
        android:id="@+id/btnSaveTransaction"
        android:layout_width="378dp"
        android:layout_height="wrap_content"
        android:text="@string/save_transaction" />
</LinearLayout>
